@@ -1,3 +1,9 @@
+2011-07-30  Thomas Koenig  <tkoenig@gcc.gnu.org>
+
+	Backport from trunk.
+	PR fortran/48876
+	* gfortran.dg/string_5.f90:  New test.
+
 2011-07-29  Wei Guozhi  <carrot@google.com>
 
 	Backported from mainline
